[gd_scene load_steps=5 format=3 uid="uid://cxjgflgkjcwq5"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_xb7x3"]
[ext_resource type="FontFile" uid="uid://dyld1xmtwxp60" path="res://assets/fonts/PixelOperatorHB.ttf" id="2_2jcec"]
[ext_resource type="Theme" uid="uid://bb5vt0x5fx5a4" path="res://assets/button_theme.tres" id="3_acmg0"]

[sub_resource type="LabelSettings" id="LabelSettings_2eq7u"]
font = ExtResource("2_2jcec")
font_size = 64

[node name="pause_menu" type="CanvasLayer"]
process_mode = 2
layer = 2
visible = false
script = ExtResource("1_xb7x3")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 859.0
offset_bottom = 645.0
color = Color(0, 0, 0, 0.498039)

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -77.5
offset_top = 64.0
offset_right = 82.5
offset_bottom = 128.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 52
text = "pause"
label_settings = SubResource("LabelSettings_2eq7u")
horizontal_alignment = 1
vertical_alignment = 1

[node name="restart" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.5
offset_top = -0.5
offset_right = 82.5
offset_bottom = 60.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_acmg0")
text = "restart"

[node name="continue" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.5
offset_top = -96.5
offset_right = 82.5
offset_bottom = -35.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_acmg0")
text = "continue"

[node name="back" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.5
offset_top = 95.5
offset_right = 82.5
offset_bottom = 156.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_acmg0")
text = "back to title
screen"

[node name="quit" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = 192.0
offset_right = 82.0
offset_bottom = 253.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_acmg0")
text = "quit"

[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
